# ITMO_ICT_WebDevelopment_2024-2025

./: .gitignore  README.md  mkdocs.yml
students/k3339/Kotovshchikov_Andrey/: Makefile  pyproject.toml
students/k3339/Kotovshchikov_Andrey/Lr1/fifth/: event_loop.py  exception.py  repository.py  request.py  response.py  routes.py  server.py  service.py  subject.py
students/k3339/Kotovshchikov_Andrey/Lr1/first/: client.py  server.py
students/k3339/Kotovshchikov_Andrey/Lr1/fourth/: reader.py  sender.py  server.py
students/k3339/Kotovshchikov_Andrey/Lr1/second/: client.py  server.py
students/k3339/Kotovshchikov_Andrey/Lr1/third/: index.html  server.py
students/k3339/Kotovshchikov_Andrey/docs/: mkdocs.yml
students/k3339/Kotovshchikov_Andrey/docs/docs/: index.md  lab1.md
students/k3339/Kotovshchikov_Andrey/docs/site/: 404.html  index.html
students/k3339/Kotovshchikov_Andrey/docs/site/lab1/: index.html
students/k3339/Kotovshchikov_Andrey/docs/site/search/: search_index.json
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_2/: .gitignore  Makefile  docker-compose.yaml  pyproject.toml
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_2/src/: manage.py
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_2/src/conferences/: admin.py  forms.py  models.py  urls.py  views.py
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_2/src/scientific_conferences/: asgi.py  settings.py  urls.py  (+1 more)
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_2/templates/: index.html
(+1704 files in other folders)
